namespace/llm/vllm/qwen3-4b-thinking-2507/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-qwen3-4b-thinking-2507
  namespace: default
  labels:
    app: vllm-qwen3-4b-thinking-2507
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-qwen3-4b-thinking-2507
  template:
    metadata:
      labels:
        app: vllm-qwen3-4b-thinking-2507
    spec:
      containers:
      - name: qwen3-4b-thinking-2507
        image: vllm/vllm-openai:latest
        command: ["/bin/sh", "-c"]
        args: [
          "vllm serve unsloth/Qwen3-4B-Thinking-2507 --max-model-len 262144 --enable-reasoning --reasoning-parser deepseek_r1"
        ]
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "2"
            memory: 6G
            nvidia.com/gpu: "1"
          limits:
            cpu: "4"
            memory: 8G
            nvidia.com/gpu: "1"
        volumeMounts:
        - mountPath: /root/.cache/huggingface
          name: cache-volume
        - name: shm
          mountPath: /dev/shm
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 5
      volumes:
      - name: cache-volume
        persistentVolumeClaim:
          claimName: qwen3-4b-thinking-2507-pvc
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: "2Gi"
