namespace/llm/vllm/qwen3-4b-thinking-2507/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-qwen3-4b-thinking-2507
  namespace: llm
spec:
  ports:
  - name: http-qwen3-4b-thinking-2507
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: vllm-qwen3-4b-thinking-2507
  sessionAffinity: None
  type: ClusterIP
