namespace/llm/vllm/qwen3-4b-thinking-2507/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qwen3-4b-thinking-2507-https
  namespace: llm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qwen3-4b-thinking-2507.llm.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: http-qwen3-4b-thinking-2507
          port: 80
          passHostHeader: true
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qwen3-4b-thinking-2507-http
  namespace: llm
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qwen3-4b-thinking-2507.llm.oglesby.io`)
      kind: Rule
      services:
        - name: http-qwen3-4b-thinking-2507
          port: 80
          passHostHeader: true
      middlewares:
      - name: internal-whitelist
        namespace: traefik
      - name: redirect-https
        namespace: traefik
